Changed Buttons. No longer offscreen on mobile

--- a/website/styles/Poker.module.css
+++ b/website/styles/Poker.module.css
@@ -101,9 +101,7 @@ padding-right:0.2em;
 }
 
 .holdbtns {
-padding-top: 1em;
-padding-left: 2em;
-padding-right: 2em;
+padding-top: .3em;
 display: flex;
 flex-direction: row;
 justify-content: space-between;
